--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MIDTRANS_CLIENT_ID= SB-Mid-client-a3nkenKSv9iDc9V0
 MIDTRANS_API_URL= https://app.sandbox.midtrans.com
-VITE_API_URL= http://localhost:5000/api
+VITE_API_URL= https://web-kos-backend-mklw.vercel.app/api
